--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.0.4",
     "mongodb": "^4.12.0",
     "next": "13.0.4",
+    "next-sitemap": "^3.1.32",
     "react": "18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-date-range": "^1.4.0",
