--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "dayjs": "^1.11.6",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.1.6",
-    "mongodb": "^4.12.0",
+    "mongodb": "^5.0.1",
     "next": "^13.1.6",
+    "next-auth": "^4.19.2",
     "next-sitemap": "^3.1.32",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
