--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.2",
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "chart.js": "^4.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
