--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.6",
     "eslint": "8.28.0",
     "eslint-config-next": "^13.1.6",
+    "gravatar": "^1.8.2",
     "mongodb": "^5.0.1",
     "next": "^13.1.6",
     "next-auth": "^4.19.2",
