--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-chartjs-2": "^5.0.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "remixicon": "^2.5.0",
     "uikit": "^3.15.24"
   }
